add info of rama2 in index

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,6 +7,11 @@
 <h2><%= Faker::Superhero.power %></h2>
 
 
+<h2><%= Faker::Superhero.power %></h2>
+<h2><%= Faker::Superhero.power %></h2>
+<h2><%= Faker::Superhero.power %></h2>
+
+
 
 <div class="card-deck">
   <div class="card">
